feat: standardize login with oauth2
